# rust-finance

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  check_output.txt  clippy.toml  deny.toml  docker-compose.yml  error.txt  errors.txt  swarm_output.txt  test_output.txt
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  fuzz.yml  publish.yml  release.yml  scorecards.yml  security.yml  test.yml
benches/: 01_tick_pipeline.rs  03_risk_checks.rs  05_fix_serializer.rs  09_memory_layout.rs  ci_regression.json
benchmarks/: Cargo.toml
benchmarks/benches/: 01_tick_pipeline.rs  02_websocket_parse.rs  04_pricing_models.rs  05_institutional_benchmark.rs
benchmarks/src/: lib.rs
crates/ai/: Cargo.toml
crates/ai/src/: analyst.rs  compaction.rs  dexter.rs  lib.rs  mirofish.rs  signal.rs
crates/ai/src/client/: rate_limiter.rs
crates/ai/tests/: test_anthropic.rs
crates/alerts/: Cargo.toml
crates/alerts/src/: engine.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: benchmark.rs  engine.rs  fill_model.rs  lib.rs  robustness.rs  strategy.rs
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  events.rs  lib.rs  time.rs
crates/common/src/models/: exchange.rs  mod.rs  order.rs
crates/compliance/src/: audit_trail.rs  lib.rs  pre_trade.rs
crates/curve25519-dalek-patch/: Cargo.toml
crates/daemon/: Cargo.toml
crates/daemon/src/: bootstrap.rs  circuit_breaker.rs  engine.rs  lib.rs  main.rs  reconnect.rs  shutdown.rs  strategy.rs  strategy_registry.rs  telemetry.rs
crates/dashboard/src/: main.rs
crates/event_bus/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: alpaca_executor.rs  bracket.rs  conditional.rs  dry_run.rs  exec_algo.rs  lib.rs  recording_executor.rs  router.rs  smart_router.rs  tca.rs  trade_updates.rs  trailing_stop.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/executor/src/strategies/stat_arb/: kalman_filter.rs
crates/feature/src/: lib.rs
crates/fix/: Cargo.toml
crates/fix/src/: lib.rs  session.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: alpaca_broker.rs  alpaca_ws.rs  finnhub_rest.rs  finnhub_ws.rs  lib.rs  mock.rs  news.rs  normalizer.rs  reconnect.rs  service.rs
crates/ingestion/src/alpaca/: mod.rs  reconnect.rs  rest.rs
crates/ingestion/src/sources/: alpaca.rs  mock.rs
crates/knowledge_graph/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/ml/src/: alpha_monitor.rs  interval_regression.rs  lib.rs
crates/model/src/: lib.rs
crates/oms/src/: blotter.rs  lib.rs  position.rs  sebi.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/db/migrations/: 004_create_market_ticks.sql
crates/persistence/src/: db.rs  dragonfly.rs  lib.rs  worker.rs
crates/persistence/src/repositories/: csv_export.rs
crates/polymarket/: Cargo.toml
crates/polymarket/src/: arbitrage.rs  auth.rs  client.rs  clob.rs  config.rs  copy_trading.rs  data.rs  gamma.rs  lib.rs  orderbook.rs  signing.rs  types.rs  websocket.rs
crates/pricing/src/: bsm.rs  heston.rs  hull_white.rs  lib.rs  sabr.rs
crates/pricing/tests/: test_bsm.rs  test_hull_white.rs  test_sabr.rs
crates/relay/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: correlation.rs  egarch.rs  garch.rs  gate.rs  interceptor.rs  kill_switch.rs  lib.rs  regime.rs  self_match.rs  var.rs
crates/signals/src/: lib.rs  microstructure.rs
crates/signer/: Cargo.toml
crates/signer/src/: lib.rs
crates/strategy/src/: lib.rs  market_maker.rs
crates/swarm_sim/src/: agent.rs  config.rs  digital_twin.rs  engine.rs  lib.rs  market.rs  scenario.rs  signal.rs
crates/tests/src/: lib.rs
crates/tui/: README.md
crates/tui/src/: app.rs  event_handler.rs  layout.rs  main.rs  state.rs
crates/tui/src/widgets/: chart_widget.rs  help_overlay.rs  mod.rs  options_chain.rs
crates/web/: Cargo.toml
crates/web-dashboard/src/: lib.rs
crates/web/src/: lib.rs  main.rs  server.rs
data/: .gitkeep
docs/: CONFIGURATION.md  CURRENT_STATE.md  SETUP.md  architecture.md  swarm_simulation.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_market_event.rs  fuzz_order_validation.rs  fuzz_sse_parser.rs
grafana/dashboards/: rustforge.json
infra/docker/: Dockerfile
installer/: alacritty.toml
scripts/: check_regression.sh
