[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/ingestion",
  "crates/parser",
  "crates/feature",
  "crates/strategy",
  "crates/model",
  "crates/risk",
  "crates/executor",
  "crates/signer",
  "crates/relay",
  "crates/daemon",
  "crates/event_bus",
  "crates/cli",
  "crates/tui",
  "crates/web",
  "crates/web-dashboard",
  "crates/dashboard",
  "crates/tests",
  "crates/persistence",
  "crates/ai",
  "crates/ml",
  "crates/backtest",
  "crates/compliance",
  "crates/execution",
  "crates/alerts",
  "crates/signals",
  "crates/pricing",
  "crates/metrics",
  "crates/fix",
  "crates/oms",
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = ">=1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
thiserror = "1.0.58"
async-trait = "0.1.80"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[dev-dependencies]
criterion    = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7.5"
iai          = "0.1"
dhat         = "0.3"
rand         = "0.8"

[[bench]]
name    = "01_tick_pipeline"
path    = "benches/01_tick_pipeline.rs"
harness = false

[[bench]]
name    = "03_risk_checks"
path    = "benches/03_risk_checks.rs"
harness = false

[[bench]]
name    = "05_fix_serializer"
path    = "benches/05_fix_serializer.rs"
harness = false

[[bench]]
name    = "09_memory_layout"
path    = "benches/09_memory_layout.rs"
harness = false
