[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7.5"
iai = "0.1"
dhat = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "01_tick_pipeline"
path = "benches/01_tick_pipeline.rs"
harness = false

[[bench]]
name = "03_risk_checks"
path = "benches/03_risk_checks.rs"
harness = false

[[bench]]
name = "02_websocket_parse"
path = "benches/02_websocket_parse.rs"
harness = false

[[bench]]
name = "04_pricing_models"
path = "benches/04_pricing_models.rs"
harness = false

[[bench]]
name = "05_institutional_benchmark"
path = "benches/05_institutional_benchmark.rs"
harness = false
