[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
chumsky = "0.9" # Optional depending on parsing needs
event_bus = { path = "../event_bus" }
schemars = "1.2.1"
jsonschema = "0.17"
