[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
postcard = { version = "1.0", features = ["alloc"] }
compact_str = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
