[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
ingestion = { path = "../ingestion" }
async-trait = "0.1"
compact_str = "0.8"
anyhow = "1.0"
tracing = "0.1"

# Trade Update WebSocket
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"

