[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
relay = { path = "../relay" }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
event_bus = { path = "../event_bus" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
futures-util = "0.3"
common = { path = "../common" }
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
base64 = "0.21"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
tokio-retry = "0.3.0"
chrono = "0.4"
