[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# WebSocket
tokio-tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# String types
compact_str = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# HTTP client (for news feed)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["test-util"] }
