[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"
solana-sdk = { version = "1.18" }
solana-transaction-status = { version = "1.18" }
crossbeam-channel = "0.5"
tracing = "0.1"
