[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full", "sync", "macros"] }
sqlx = { version = "0.7", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = { version = "0.26", features = ["tokio-comp"] }
