[package]
name = "risk"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
execution = { path = "../execution" }
ai = { path = "../ai" }
swarm_sim = { path = "../swarm_sim" }
compact_str = "0.8"
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
statrs = "0.16"
